添加注释，修改显而易见的错误